--- a/reactRedux/package.json
+++ b/reactRedux/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.1.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
+    "redux": "^4.1.2",
     "serve": "^11.3.2",
-    "sweetalert2": "^9.17.1",
-    "sweetalert2-react-content": "^3.0.3"
+    "sweetalert2": "^9.17.2",
+    "sweetalert2-react-content": "^3.3.3"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -39,12 +40,12 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-adapter-react-16": "^1.15.6",
     "jest-enzyme": "^7.1.2",
-    "redux-devtools": "^3.6.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.9"
   },
-  
-    "setupFiles": ["<rootDir>/src/setupTests.js"]
-   
+  "setupFiles": [
+    "<rootDir>/src/setupTests.js"
+  ]
 }
